# MPointers

./: .gitignore  readme.md
MPointerLibrary/: CMakeLists.txt
MPointerLibrary/include/: DoublyLinkedList.h  MPointer.h  MPointerGC.h  MPointerList.h
MPointerLibrary/src/: MPointerGC.cpp  MPointerList.cpp
MPointerLibrary/tests/: DoublyLinkedListTest.cpp  MPointerGCTest.cpp  MPointerTest.cpp
MainApp/: CMakeLists.txt  main.cpp
MainApp/include/: DoublyLinkedList.h  SortAlgorithms.h
MainApp/src/: DoublyLinkedList.cpp  SortAlgorithms.cpp
MainApp/tests/: DoublyLinkedListTest.cpp  SortAlgorithmsTest.cpp
